expand project menu, fix massupdate visibility and
more types added to ext2mode on code.Browser.js

--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -1360,18 +1360,18 @@
                         
                         .icon-large { margin-right:5px; vertical-align:middle; }
                     }
-                    .menu-title { display:none; }
+                    .menu-title { display:inline; }
                     
                     &:hover {
                         color:@primary;
                         border-bottom:2px solid #eee;
                         a { text-decoration:none; }
-                        .menu-title { display:inline; }
+                        /*.menu-title { display:inline; }*/
                     }
                     &.active {
                         border-bottom:2px solid @primary;
                         color:@primary;
-                        .menu-title { display:inline; }
+                        /*.menu-title { display:inline; }*/
                     }
                 }
             }
